Implement a custom feed discovery algorithm
We've been using the Syndication library's built-in regex-based feed
discovery, which is quite unreliable.  This one uses the gumbo parser,
which we were already using to generate the article content model.

As part of this change, the UpdatableFeed class is reimplemented to
hook into the Syndication::ParserCollection directly instead of using
Loader/DataRetriever, since the Loader API doesn't provide access
to the raw data.  Some glue code for interfacing with the gumbo parser
is also moved into the core lib.

--- a/feedcore/CMakeLists.txt
+++ b/feedcore/CMakeLists.txt
@@ -17,6 +17,8 @@ set(feedcore_HEADERS
     updatablefeed.h
     opmlreader.h
     sharedcache.h
+    gumbovisitor.h
+    feeddiscovery.h
     )
     
 set(feedcore_SRCS
@@ -32,6 +34,8 @@ set(feedcore_SRCS
     updatablefeed.cpp
     opmlreader.cpp
     sharedcache.cpp
+    gumbovisitor.cpp
+    feeddiscovery.cpp
     )
     
 add_library(feedcore STATIC ${feedcore_SRCS})
@@ -42,4 +46,5 @@ target_link_libraries(feedcore
     Qt5::Sql
     Qt5::Network
     KF5::Syndication
+    htmlparser
 )
