Exclude Qt Remote Objects from 1.x apk
QtRO isn't excluded from the apk on master because it's planned to use it
for activity-service communication.  However the 1.x series doesn't
support background running on android, so we don't need it in the apk.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -81,6 +81,8 @@ android {
         // but we don't need the styles because we aren't
         // actually displaying any of those controls.
         exclude 'lib/*/libqml_QtQuick_Controls_Styles_*'
+
+        exclude 'lib/*/libQt5RemoteObjects_*.so'
     }
 
     // Do not compress Qt binary resources file
