Fetch readable web content on-demand
Introduces a user option to fetch article content from the linked web
page using installed `qreadable` binary. Readable content is stored
in the database once it has been retrieved successfully.

see https://github.com/cscarney/qreadable

This bumps the database schema version to 2.

--- a/feedcore/CMakeLists.txt
+++ b/feedcore/CMakeLists.txt
@@ -19,6 +19,9 @@ set(feedcore_HEADERS
     sharedcache.h
     gumbovisitor.h
     feeddiscovery.h
+    readability/readability.h
+    readability/qprocessreadability.h
+    readability/qreadablereadability.h
     )
     
 set(feedcore_SRCS
@@ -36,6 +39,8 @@ set(feedcore_SRCS
     sharedcache.cpp
     gumbovisitor.cpp
     feeddiscovery.cpp
+    readability/qprocessreadability.cpp
+    readability/qreadablereadability.cpp
     )
     
 add_library(feedcore STATIC ${feedcore_SRCS})
