--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,6 +1,9 @@
-name: CMake
+name: Autotests
 
 on:
+  workflow_dispatch:
+  push:
+    branches: [ "master", "v1-series" ]
   pull_request:
     branches: [ "master", "v1-series" ]
 
