Link qreadable as library instead of launching process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ find_package(Qt5 COMPONENTS Core Qml Network Quick QuickControls2 Sql REQUIRED)
 find_package(KF5Syndication REQUIRED)
 find_package(KF5Config REQUIRED)
 find_package(KF5DBusAddons CONFIG QUIET)
+find_package(QReadable REQUIRED)
 
 if (ANDROID)
     set(BUILD_TESTING OFF)
