Refactor Readability class
Readability now returns an object representing a pending result instead
of emitting result signals directly from the readability class. This
simplifies calling code: callers no longer have to filter out results
from multiple requests, or manually disconnect from the result signals
when the operation completes.

--- a/feedcore/CMakeLists.txt
+++ b/feedcore/CMakeLists.txt
@@ -20,6 +20,7 @@ set(feedcore_HEADERS
     gumbovisitor.h
     feeddiscovery.h
     readability/readability.h
+    readability/readabilityresult.h
     readability/qreadablereadability.h
     )
     
