Github CI to build QReadable

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,6 +11,9 @@ env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
 
+  # Commit identifier for good version of QReadable (tag or commit sha)
+  QREADABLE_COMMIT: 8fbafab3e3ebf646b9e1d295a36d9731e736f883
+
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -18,8 +21,29 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install Dependencies"
+    - name: Install Dependencies
       run: sudo apt-get -y install cmake extra-cmake-modules libkf5config-dev libkf5dbusaddons-dev libkf5syndication-dev qtbase5-dev qtdeclarative5-dev qtquickcontrols2-5-dev qttools5-dev
+
+    - name: Cache QReadable
+      id: cache-qreadable
+      uses: actions/cache@v3
+      with:
+        path: qreadable
+        key: qreadable-${{env.QREADABLE_COMMIT}}
+        restore-keys: |
+          qreadable-
+
+    - name: Checkout QReadable
+      if: steps.cache-qreadable.outputs.cache-hit != 'true'
+      run: |
+        mkdir qreadable && cd qreadable && git init && git remote add origin https://invent.kde.org/ccarney/qreadable.git
+        git fetch --depth 1 origin ${{env.QREADABLE_COMMIT}} && git checkout FETCH_HEAD
+
+    - name: Build QReadable
+      working-directory: qreadable
+      run: |
+        cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        cd build && make && sudo make install
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
