Add icon for "Show Web Content" action

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -93,6 +93,7 @@ if (ANDROID)
         window-close-symbolic
         tools-report-bug
         dialog-cancel
+        view-readermode
         )
 endif()
 
