Add tray icon with "-symbolic" suffix to support theming on GNOME
Tray icons are loaded by the shell and not the app, and the GNOME shell
only applies theme colors to icons that literally end in "-symbolic"

To deal with this, add a copy of the RSS icon that conforms to gtk's
naming conventions and use that for the tray icon instead of the one
from the breeze theme.

Fixes #100

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -3,7 +3,9 @@
 
 set(icons 
     icons/sc-apps-com.rocksandpaper.syndic.svg
-    icons/sc-status-com.rocksandpaper.syndic.feed-empty.svg)
+    icons/sc-status-com.rocksandpaper.syndic.feed-empty.svg
+    icons/sc-actions-com.rocksandpaper.syndic.tray-icon-symbolic.svg
+    )
 message(${icons})
 ecm_install_icons(ICONS ${icons} DESTINATION share/icons THEME hicolor)
 
