Show all articles from category when clicking category header
Creates a new CategoryFeed class which aggregates only the feeds that
belong to a particular category.  When the category header is clicked
a CategoryFeed is created on-the-fly and displayed.

--- a/feedcore/CMakeLists.txt
+++ b/feedcore/CMakeLists.txt
@@ -9,7 +9,9 @@ set(feedcore_HEADERS
     future.h
     context.h
     scheduler.h
+    aggregatefeed.h
     allitemsfeed.h
+    categoryfeed.h
     factory.h
     provisionalfeed.h
     networkaccessmanager.h
@@ -30,7 +32,9 @@ set(feedcore_SRCS
     article.cpp
     context.cpp
     scheduler.cpp
+    aggregatefeed.cpp
     allitemsfeed.cpp
+    categoryfeed.cpp
     provisionalfeed.cpp
     networkaccessmanager.cpp
     starreditemsfeed.cpp
