--- a/feedcore/CMakeLists.txt
+++ b/feedcore/CMakeLists.txt
@@ -21,6 +21,8 @@ set(feedcore_HEADERS
     sharedcache.h
     gumbovisitor.h
     feeddiscovery.h
+    automation/automationengine.h
+    automation/automationrule.h
     readability/readability.h
     readability/readabilityresult.h
     readability/qreadablereadability.h
@@ -43,6 +45,8 @@ set(feedcore_SRCS
     sharedcache.cpp
     gumbovisitor.cpp
     feeddiscovery.cpp
+    automation/automationengine.cpp
+    automation/automationrule.cpp
     readability/qreadablereadability.cpp
     )
     
