Add tests for AllItemsFeed

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,3 +20,7 @@ target_link_libraries(testContextValuePropagation PRIVATE Qt5::Test feedcore)
 add_executable(testProvisionalFeed tst_provisionalFeed.cpp)
 add_test(NAME testProvisionalFeed COMMAND testProvisionalFeed)
 target_link_libraries(testProvisionalFeed PRIVATE Qt5::Test feedcore)
+
+add_executable(testAllItemsFeed tst_allitemsfeed.cpp)
+add_test(NAME testAllItemsFeed COMMAND testAllItemsFeed)
+target_link_libraries(testAllItemsFeed PRIVATE Qt5::Test feedcore)
