Make syndic build against Qt6/KF6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(CMAKE_AUTORCC ON)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(QT_MAJOR_VERSION 6)
 
 find_package(ECM CONFIG REQUIRED)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
@@ -24,20 +25,20 @@ include(ECMPoQmTools)
 include(KDEInstallDirs)
 include(KDECMakeSettings)
 
-find_package(Qt5 COMPONENTS Core Qml Network Quick QuickControls2 Sql REQUIRED)
+find_package(Qt6 COMPONENTS Core Qml Network Quick QuickControls2 Sql REQUIRED)
 
-find_package(KF5Syndication REQUIRED)
-find_package(KF5Config REQUIRED)
-find_package(KF5DBusAddons CONFIG QUIET)
+find_package(KF6Syndication REQUIRED)
+find_package(KF6Config REQUIRED)
+find_package(KF6DBusAddons CONFIG QUIET)
 find_package(QReadable REQUIRED)
 
 if (ANDROID)
     set(BUILD_TESTING OFF)
-    find_package(KF5Kirigami2 REQUIRED)
+    find_package(KF6Kirigami2 REQUIRED)
     find_package(OpenSSL)
-    find_package(Qt5 COMPONENTS Svg AndroidExtras REQUIRED)
+    find_package(Qt6 COMPONENTS Svg AndroidExtras REQUIRED)
 else()
-    find_package(Qt5Widgets CONFIG QUIET)
+    find_package(Qt6Widgets CONFIG QUIET)
 endif()
 
 set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Werror -Wno-error=deprecated-declarations ${CMAKE_CXX_FLAGS_DEBUG}")
