Infrastructure for updater plugins
UpdatableFeed no longer contains its own updater implementation, rather
it obtains that from the updaterFactory() provided by its context. The
default updater implementation is moved to FeedCore::DefaultUpdater which
is created by the UpdaterFactory if no suitable updater plugin is found.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ add_subdirectory(data)
 add_subdirectory(feedcore)
 add_subdirectory(sqlite)
 add_subdirectory(src)
+add_subdirectory(updater-plugins)
 
 ecm_install_po_files_as_qm(po)
 install(FILES com.rocksandpaper.syndic.appdata.xml DESTINATION ${KDE_INSTALL_METAINFODIR})
