Allow building without QReadable for testing purposes
Introduce the WITHOUT_QREADABLE build option to build feedcore without
a dependency on QReadable. When built in this manner, attempts to fetch
readable content will immediately fail.

This is very much not recommended for builds that will be used by humans,
since it renders the readability-related features of the application
completely non-functional, but it is sometimes convenient for development
and testing purposes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,10 @@ find_package(Qt6 COMPONENTS Core Qml Network Quick QuickControls2 Sql REQUIRED)
 find_package(KF6Syndication REQUIRED)
 find_package(KF6Config REQUIRED)
 find_package(KF6DBusAddons CONFIG QUIET)
+
+if (NOT WITHOUT_QREADABLE)
 find_package(QReadable REQUIRED)
+endif()
 
 if (ANDROID)
     set(BUILD_TESTING OFF)
