Factor out Feed-specific behavior from ArticleListModel
This lays the groundwork for creating a home/overview page, which is
an article list, but not a feed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ set(syndic_HEADERS
     platformhelper.h
     contentimageitem.h
     application.h
+    feedmodel.h
     networkaccessmanagerfactory.h
     )
 
@@ -28,6 +29,7 @@ set(syndic_SRCS
     contentimageitem.cpp
     networkaccessmanagerfactory.cpp
     application.cpp
+    feedmodel.cpp
     main.cpp
     resources.qrc
     )
