Move web content pre-fetch from updater to automation rule
Moves the existing logic for pre-fetching web page text with readability
out of the updater into the automation engine. The update can now finish
while web content is still being downloaded in the background.

Since the web content prefetch is simply populating a cache, there is no
reason to make the user wait for it to complete before browsing; the worst
case scenario is just a cache miss.

This change makes it a bit more urgent that we create a user interface
for managing the automation engine and its tasks (issue #189).

Fixes #253

--- a/feedcore/CMakeLists.txt
+++ b/feedcore/CMakeLists.txt
@@ -26,6 +26,7 @@ set(feedcore_HEADERS
     automation/automationrule.h
     readability/readability.h
     readability/readabilityresult.h
+    readability/readabilityprefetchrule.h
     )
     
 set(feedcore_SRCS
@@ -46,8 +47,10 @@ set(feedcore_SRCS
     gumbovisitor.cpp
     feeddiscovery.cpp
     searchresultfeed.cpp
+    automation/abstractautomationrule.h
     automation/automationengine.cpp
     automation/automationrule.cpp
+    readability/readabilityprefetchrule.cpp
     )
 
 if (QReadable_FOUND)
