Rework settings for downloading web content
Replaces the checkbox in settings "Download web content for offline
viewing" with a new dialog box to select both the specific feeds that use
web content *and* the strategy for downloading it.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ set(syndic_HEADERS
     feedmodel.h
     highlightsmodel.h
     networkaccessmanagerfactory.h
+    editablefeedlistmodel.h
     )
 
 set(syndic_SRCS
@@ -32,6 +33,7 @@ set(syndic_SRCS
     application.cpp
     feedmodel.cpp
     highlightsmodel.cpp
+    editablefeedlistmodel.cpp
     main.cpp
     resources.qrc
     )
