--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,3 +32,7 @@ target_link_libraries(testArticleSummary PRIVATE Qt6::Test feedcore)
 add_executable(testAutomationEngine tst_automationengine.cpp)
 add_test(NAME testAutomationEngine COMMAND testAutomationEngine)
 target_link_libraries(testAutomationEngine PRIVATE Qt6::Test feedcore)
+
+add_executable(testWebPageFallback tst_webpage_fallback.cpp)
+add_test(NAME testWebPageFallback COMMAND testWebPageFallback)
+target_link_libraries(testWebPageFallback PRIVATE Qt6::Test feedcore)
